--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,5 +7,8 @@
   <%= f.label :artist %>
   <%= f.text_field :artist %>
   <br>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <br>
   <%= f.submit %>
 <% end %>
