automatically backed up by learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_field :artist %>
   <br>
   <%= f.label :title %>
-  <%= f.checkboxes :title %>
+  <%= f.checkboxes :genres %>
   <br>
   <%= f.submit %>
 <% end %>
