--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.label :artist %>
   <%= f.text_field :artist %>
   <br>
-  <%= f.label :title %>
+  <%= f.label :genres %>
   <%= f.checkboxes :genres %>
   <br>
   <%= f.submit %>
