automatically backed up by learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -10,5 +10,8 @@
   <%= f.label :genres %>
   <%= f.checkboxes :genres %>
   <br>
+  <%= f.label :song_notes %>
+  <%= f.checkboxes :genres %>
+  <br>
   <%= f.submit %>
 <% end %>
