--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_field :artist %>
   <br>
   <%= f.label :genres %>
-  <%= f.checkboxes :genres %>
+  <%= f.collection_check_boxes :genres %>
   <br>
   <%= f.label :song_notes %>
   <%= f.checkboxes :genres %>
