--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :title %>
   <br />
   <%= f.label :artist %>
-  <%= f.text_field :artist %>
+  <%= f.text_field :artist_name %>
   <br>
   <%= f.label :genres %>
   <%= f.check_box :genres %>
