--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
-  <%= f.label :artist %>
+  <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <br>
   <%= f.label :genres %>
