automatically backed up by learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <br>
-  <%= f.label :genres %>
+  <%= f.collection :genre %>
   <%= f.check_box :genres %>
   <br>
   <%= f.label :song_notes %>
