--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <br>
-  <%= f.collection :genre %>
+  <%= f.collection :genre_id, Genre.all, :id, :name %>
   <br>
   <%= f.label :song_notes %>
   <%= f.checkboxes :genres %>
