--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -9,8 +9,9 @@
   <br>
   <%= f.collection :genre_id, Genre.all, :id, :name %>
   <br>
-  <%= f.label :song_notes %>
-  <%= f.checkboxes :genres %>
+  <input name = "song[note_contents][]" id = "song_notes_1">
+  <input name = "song[note_contents][]" id= "song_notes_2">
+  <input name = "song[note_contents][]" id= "song_notes_3">
   <br>
   <%= f.submit %>
 <% end %>
